test/expected/using_ai.out
using SI = auto int
                ^
17: syntax error: "int": unexpected token ("int" is a keyword)
